--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=David+Libre&family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=David+Libre&family=Lato:wght@700&family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 * {
   box-sizing: border-box;
@@ -11,6 +12,7 @@ body {
   color: #000;
   margin: 0;
 }
+
 h2 {
   font-family: 'Lato', sans-serif;
   font-size: 24px;
@@ -98,6 +100,8 @@ blockquote {
   justify-content: center;
   margin: 40px 0 0 0;
   font-family: 'David Libre', serif;
+  font-size: 18px;
+  color: #75594E;
 }
 
                                       /* BIG NEWS SECTION GOES HERE BELOW  */
@@ -105,7 +109,6 @@ blockquote {
 .big-news-container {
   margin: 40px 20px;
   color: #fff;
-  /* border: 0.5px solid #47353A; */
 }
 
 .big-news-container a {
@@ -114,18 +117,16 @@ blockquote {
   align-items: flex-end;
   width: 100%;
   text-decoration: none;
-  background-color: #D9BEB4;
+  background-color:#9E725D;
 }
 
 .big-news-container img {
   width: 100%;
-  /* border-right: 0.5px solid #47353A; */
 }
 
 .big-news-text {
   margin: 0 20px;
-  /* color: #290C01; */
-  color: #fff;
+  color: #F4EEE7;
 }
 
 p .introtext {
@@ -137,6 +138,8 @@ p .introtext {
   max-width: 40ch;
 }
 
+                                         /* Card-heading starts here */
+
 .card_heading {
   width: 80%;
   display: flex;
@@ -147,6 +150,7 @@ p .introtext {
 
 .card_heading h3 {
   margin-bottom: 5px;
+  color: #290C01;
 }
                                         /* NEWSCARDS SECTION STARTS HERE */
 .newscard_container {
@@ -155,7 +159,6 @@ p .introtext {
   flex-direction: column;
   width: 100%;
   justify-content: center;
-  /* align-items: center; */
 }
 
 .newscard_container a {
@@ -163,10 +166,39 @@ p .introtext {
   width: 80%;
   display: flex;
   flex-direction: column;
-  /* should this justify-content space between be here? */
-  justify-content: space-between;
   margin-bottom: 20px;
+  background: #F4EEE7;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.card_1,
+.card_2,
+.card_3,
+.card_4,
+.card_5,
+.card_6,
+.card_7,
+.card_8 {
+  position: relative;
+}
+
+.category_tech,
+.category_food,
+.category_travel,
+.category_fashion,
+.category_living {
+  position: absolute;
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  top:25px;
+  left: 25px;
+  color: #fff;
+  background: #9E725D;
+  padding: 3px 6px;
+  border-radius: 20px;
 }
 
 .newscard_container img {
@@ -192,19 +224,18 @@ p .introtext {
 .newscard_bottom p {
   margin: 0 0 20px 0;
   line-height: 1.2;
-  /* margin-bottom: 20px; */
 }
-
 
 footer div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #D9BEB4;
-  /* overflow: hidden; */
+  background-color: #EBD1C3;
+  overflow: hidden;
   margin-top: 20px;
-  padding: 8px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
+  box-shadow: 8px 5px 8px 8px rgba(51, 51, 51, 0.4);
 	}
 
 footer img {
@@ -213,8 +244,45 @@ footer img {
 	}
 
 footer p {
-  font-size: 16px;
-	}
+  font-size: 12px;
+  color: #290C01;
+  }
+  
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+label {
+  color: #290C01;
+  font-family: 'David Libre', serif;
+  font-size: 14px;
+  text-align: center;
+}
+
+#fname {
+  background: #F4EEE7;
+  border: none;
+  border-radius: 0;
+  margin-left: 5px;
+  margin-right: 5px;
+  max-height: 18px;
+  max-width: 150px;
+}
+
+input {
+  color: #F4EEE7;
+  background-color: #9E725D; 
+  border: none;
+  border-radius: 8px;
+  font-family: 'David Libre', serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  max-height: 18px;
+  margin: 5px 0 0 0;
+}
 
 /* Media query for relative and absolute position of big-news-container for mobile screen only below (max-width). I added a max-width media query because I didn't know how to override the relative/absolute positioning on bigger screens doing mobile-first.*/
 
@@ -304,11 +372,36 @@ footer p {
     margin-left: 20px;
     margin-right: 20px;
   }
+
   .newscard_container a:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.4), 0 10px 10px rgba(0,0,0,0.4);
     transform: translate(0px, 3px);
     transition: transform 0.3s ease-out;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+
+  footer p {
+    font-size: 14px;
+  }
+
+  form {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  label {
+    font-size: 16px;
+  }
+
+  #fname {
+    max-height: none;
+    max-width: none;
+  }
+
+  input {
+    max-height: none;
+    margin: 0 5px 0 0;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -322,7 +415,9 @@ footer p {
   .big-news-container p:last-child {
     max-width: 85ch;
     }
-}
-
+  
+  footer p {
+    font-size: 16px;
+  }
 }
 
