--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,4 @@
-/* Style for Project 2: News site */
+/* Style for Project 2, Technigo Bootcamp: News site */
 
 * {
   box-sizing: border-box;
@@ -27,6 +27,8 @@ h1, h2, h3, h4, h5, h6 {
 a {
 	text-decoration: none;
 }
+
+/* Style for navbar */
 
 .main-nav {
 	margin-top: 5px;
@@ -75,6 +77,8 @@ header {
   justify-content: space-evenly;
 }
 
+/* Style for the big-news section */ 
+
 .big-news {
   /* Photo by Jakub Dziubak on Unsplash */
   background-image: url("img/jakub-dziubak-XtUd5SiX464-unsplash.jpg");
@@ -122,7 +126,7 @@ header {
   transition: all .5s;
 }
 
-/*  News - style */
+/*  Style for the news-section */
 
 .news {
   display: grid;
@@ -136,9 +140,9 @@ header {
   max-width: 90%;
   max-height: 100%;
   background: #EFE1D6;
-  padding: 1.5rem;
+  padding: 1rem;
+  margin: 1rem;;
   border: 1px solid #E2E2E2;
-  border-radius: .5rem;
   box-shadow: 12px 5px 10px 1px #dcdcdc;
   object-fit: contain;
 }
@@ -170,6 +174,7 @@ footer {
   width: 100%;
   background-color: #EFE1D6;
   padding: .75rem;
+  margin-top: 10rem;
   color: #000000;
   text-align: center;
 }
@@ -215,26 +220,14 @@ footer {
   }
 
 
-/* Media Queries */ 
-
-/*  Tablets in landscape mode, older desktop monitors */
-@media only screen and (min-width: 1024px) and (max-width: 1365px) {
-h1 { 
-    font-size: 32px;
-}
-
-}
+/* Media Queries */
 
 /*  Tablets in portrait mode, large display smartphones landscape mode */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-h1 {
-    font-size: 28px; 
-}
 
 .big-news {
   margin: 2rem;
 }
-
 }
 
 /*  Smartphones in landscape mode */
@@ -263,8 +256,4 @@ h1 {
     .big-news {
       margin: 1rem;
   }
-
-  h1 {
-    font-size: 18px;
-}
 }
