Removed code folder

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   color:white;
   margin:0px;
   font-family: 'Baloo Tamma 2', cursive;
-  background-image: url('../assets/texture_08_by_oleo_kun_d1a4a8l.jpg');
+  background-image: url('./assets/texture_08_by_oleo_kun_d1a4a8l.jpg');
 }
 html { font-size: 13px; 
 }
