--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,5 @@
-html {
+
+  html {
   background-image: url(./images/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -147,7 +148,7 @@ img {
 }
 
 .card a:link {
-  color: #000;
+  color: rgb(65, 211, 155);
   font-size: 15px;
   text-decoration: none;
 }
@@ -178,7 +179,7 @@ footer {
 }
 
   h1 {
-    font-size:60px;
+    font-size: 50px;
     margin-left: 20px; 
 }
 
@@ -227,7 +228,7 @@ footer {
     display: flex;
     align-items: center;
     padding-top: 25px;
-    padding-left: 25x;
+    padding-left: 55x;
     font-size: 20px;
   }
 
@@ -253,7 +254,106 @@ footer {
   
   #mainphoto {  
     width: auto;
-    height: 320px;
+    height: 300px;
+}
+  
+   .card {
+    height: 500px;
+}
+  
+  .card a:link {
+    font-size: 18px;
+  }
+
+  .card a:hover {
+    color: #000;
+  }
+
+  .card a:visited {
+    color: grey;
+  }
+  
+  footer {
+    height: 45px;
+  }
+}
+
+/*** DESKTOP VIEW ***/
+@media (min-width: 1024px) {
+  header {
+    height: 190px;
+}
+
+  h1 {
+    font-size:80px;
+    padding-left: 470px; 
+}
+
+  h2 {
+    font-size: 40px;
+    margin-top: 30px;
+}
+
+  h3 {
+    font-size: 28px;
+}
+
+  p {
+    font-size: 20px;
+}
+
+  .main {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20px;
+}
+
+  img {
+    align-items: center;
+}
+  
+  .hamburger {
+    display: none;
+}
+  
+  nav {
+   display: flex;
+  }
+
+.left {
+  order: 1;
+  padding-left: 50px;
+}
+  .right {
+    order: 2;
+    padding-left: 5px;
+  }
+
+  .left-links {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+  }
+
+  .right-links {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+  }
+
+  .left, .right, a:hover {
+    color: #000;
+  }
+
+  .main a:link {
+    font-size: 19px;
+}
+  
+  #mainphoto {  
+    width: 900px;
+    height: auto;
 }
   
    .card {
