--- a/code/style.css
+++ b/code/style.css
@@ -155,6 +155,11 @@ html{
       align-items: center;
       margin: 50px 0;
     }
+    .article-card:hover{
+      box-shadow: 0 14px 28px rgba(0,0,0,0.4);
+      transform: translate(0px, 3px);
+      transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    }
     h1{
       display: block;
       font-size: 65px;
