--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,314 @@
-html {
-  background: #0025ff;
+* {
+ padding: 0px; 
+ margin: 0px;
+
+}
+
+
+/* Header with logo and nav */
+header {
+  display:flex;
+  width: 100%;
+  justify-content: space-between;
+  z-index: 1;
+
+  background-color: #fff;
+}
+
+.logoIcon  {
+  width: 140px;
+  margin-left: 30px;
+  margin-right: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-self: center;
+
+  font-family: 'Gill Sans';
+  font-size: 20px;
+}
+
+nav a {
+  color: rgb(68, 68, 68);
+  letter-spacing: 0.1em;
+  text-decoration: none;
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+nav :hover {
+  background-color: aqua;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-self: center;
+
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #4c0e0f;
+  border-radius: 5px;
+}
+
+
+
+/* @MEDIA for header block */
+@media only screen and (max-width: 768px) {
+  nav {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  nav {
+    display: none;
+  }
+  .logoIcon {
+    width: 25%;
+    margin: 15px;
+  }
+}
+ 
+
+/* Start picture */
+.todaysPic {
+  margin: 0px;
+  width: 100%;
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+}
+
+.start-picture {
+  position: relative;
+  text-align: center;
+  width: 100%;
+
+}
+
+.ref {
+  background-color: aqua;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: #000;
   color: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* @MEDIA for start picture block */
+@media only screen and (max-width: 600px) {
+  .ref {
+      display: none;
+    }
+  }
+
+/* Big news section */
+.big-arc {
+  margin: 50px;
+  margin-bottom: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+
+  box-sizing: border-box;
+}
+
+.big-arc img {
+  width: 100%;
+}
+
+.big-arc h4 {
+  padding-top: 20px;
+  font-family: 'Gill Sans';
+  font-size: 48px;
+}
+
+.big-arc p {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  font-size: 30px;
+  font-family: 'Gill Sans';
+  color: rgb(48, 48, 48);
+}
+
+/* @MEDIA for big news block */
+@media only screen and (max-width: 600px) {
+
+  .big-arc {
+    margin: 15px;
+  }
+  .big-arc h4 {
+    font-size: 33px;
+  }
+  .big-arc p {
+    font-size: 25px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+  } 
+}
+
+/* Small News Section */
+.start-text {
+  width: 300px;
+  margin: 20px;
+  margin-bottom: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 20px ;
+  box-sizing: border-box;
+}
+
+.autor {
+  font-family: 'Gill Sans';
+  font-size: 48px;
+  font-weight: 300;
+  margin-top: 5px;
+  color: #303030;
+  box-sizing: border-box;
+}
+
+.date {
+  font-family: 'Gill Sans';
+  font-size: 30px;
+  font-weight: 300;
+  margin-top: 5px;
+  color: rgb(48, 48, 48);
+  box-sizing: border-box;
+  padding-left: 10px;
+}
+
+.overview {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  margin-top: 90px;
+}
+
+.overview img {
+  width: 300px;
+  height: 400px;
+  object-fit: cover;
+  background-size: cover; 
+  transition: transform .2s;
+
+}
+
+.overview img:hover {
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2); 
+  } 
+
+.arc {
+  margin: 20px;
+  margin-bottom: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+  box-sizing: border-box;
+}
+
+.arc p {
+  margin-top: 2px;
+  margin-bottom: 5px;
+  font-family: 'Gill Sans';
+  font-size: 15px;
+}
+
+.arc h4 {
+  font-family: 'Gill Sans';
+  font-weight: 600;
+  font-size: 25px;
+  margin-top: 5px;
+}
+
+
+/* @MEDIA for small news block */
+@media only screen and (max-width: 600px) {
+  .overview {
+    margin-top: 20px
+  } 
+  .start-text{
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+  }
+  .autor {
+    font-size: 33px;
+  }
+  .date {
+    font-size: 25px;
+  }
+  .arc {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
+
+
+/* Footer section */
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 120px;
+  background-color: #F7E6DA;
+  margin-top: 150px;
+}
+
+footer p {
+  font-family: 'Gill Sans';
+  color: #000;
+  align-self: center;
+}
+
+.logo-social {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px;
+}
+
+.logo-social img {
+  width: 50px;
+  padding-left: 10px;
+}
+
+.logo-social img:hover {
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2); 
+}
+
+
+/* @MEDIA for footer block */
+@media only screen and (max-width: 600px) {
+  footer {
+    flex-direction: column;
+    height: 150px;
+  }
+  
 }
