--- a/code/style.css
+++ b/code/style.css
@@ -3,12 +3,10 @@
 
 header {
   background: wheat;
-  height: 220px;
+  height: 150px;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: right;
-  
 }
 
 header img {
@@ -16,30 +14,31 @@ header img {
   
 }
 
-header a {
+nav {
+  display: none;
+}
+
+nav a {
   color: black;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: none;
   font-size: 20px;
 }
 
-nav {
-  display: none;
-}
-
 .hamburger {
   display: flex;
   width: 100px;
-  height: 100px;
+  height: 50px;
   flex-direction: column;
   justify-content: space-between;
   
 }
 
 .hamburger div {
-  width: 100px;
-  height: 15px;
+  width: 50px;
+  height: 10px;
   background: black;
+  border-radius: 5px;
 }
 
 /* body */
@@ -144,8 +143,12 @@ footer h2 {
   
   }
 
+  header {
+    justify-content: space-between;
+  }
+
   nav {
-    display: block;
+    display: inline-block;
   }
 
   .hamburger {
@@ -171,8 +174,12 @@ footer h2 {
   
   }
 
+  header {
+    justify-content: space-between;
+  }
+
   nav {
-    display: block;
+    display: inline-block;
   }
 
   .hamburger {
