--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /**** HEADER ****/
@@ -22,20 +22,16 @@ header {
 }
 
 .logo-container {
-  display: flex;
-  justify-self: flex start;
+  display: flex; 
   width: 20%;
   padding-left: 20px;
 }
 
 .logo {
   width: 80px;
-  display: flex;
 }
 
 .header-heading {
-  display: flex;
-  align-items: left;
   justify-content: center;
   width: 60%;
 }
@@ -75,17 +71,11 @@ h2 {
   margin: 0px;
 }
 
-h3 {
-  text-transform: uppercase;
-  margin: 0px;
-  padding-top: 20px;
-}
-
 p {
   text-align: left;
   width: 90%;
   padding-bottom: 30px;
-  }
+}
 
 /**** ARTICLE ****/
 .news-container {
@@ -98,11 +88,11 @@ p {
   margin-left: 10%;
   margin-right: 10%;
   width: 80%;
-  }
+}
 
 .news-img {
   width: 100%;
-  }
+}
 
 .tag {
   font-weight: bold;
@@ -111,7 +101,7 @@ p {
   color:#1B27F5; 
   padding: 0px;
   margin: 30px 0px 15px 0px;
-  } 
+} 
 
 .news {
   display: flex;
@@ -119,24 +109,21 @@ p {
   width: 45%;
   padding: 5px;
   margin: 2px;
-  align-items: left;
-  }
+}
 
 a.button {
-  font-size: 16px;
   background-color: #1B27F5; 
-  padding: 8px;
   color: white;
-  width: 100px;
   text-decoration: none; 
+  padding: 10px;
+  width: 100px;
+  font-size: 16px;
 }
 
 /**** OTHER NEWS ****/
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
   border-top: blue solid 2px;
   border-bottom: blue solid 2px;
   margin: 5%;
@@ -146,7 +133,6 @@ a.button {
 
 .card {
   flex-direction: column;
-  align-items: center;
   width: 25%;
   height: 25%;
   padding: 5px;
@@ -155,7 +141,7 @@ a.button {
 .card-img {
   width: 100%;
   padding-bottom: 20px;
-  }
+}
 
 .card-link {
   text-transform: uppercase;
@@ -174,7 +160,7 @@ a.card-link:hover {
 
 footer {
   background-color: white;
-  padding: 60px;
+  padding: 40px;
   margin: 0px;
 }
 
@@ -192,11 +178,19 @@ footer {
     justify-content: center;
   }
 
+  p {
+    padding-bottom: 25px;
+  }
+
   .card {
     padding: 20px;
   }
-  
 
+  /**** OTHER NEWS ****/
+
+  footer {
+    display: none;
+  }
 }
 
 /**** FOR MOBILE ****/
@@ -230,7 +224,6 @@ footer {
   /**** ARTICLE ****/
   
   .news-container {
-    align-items: center;
     margin: 0px;
     width: 100%;
   }
@@ -243,6 +236,10 @@ footer {
     margin-bottom: 20px;
   }
 
+  p {
+    padding-bottom: 20px;
+  }
+
   /**** OTHER NEWS ****/
 
   .card-container {
@@ -253,5 +250,11 @@ footer {
   .card {
     width: 50%;
     padding: 10px;
+  }
+
+    /**** FOOTER ****/
+
+  footer {
+    display: none;
   }
 }
