changed a detail in css

--- a/code/style.css
+++ b/code/style.css
@@ -116,8 +116,9 @@ a.button {
   color: white;
   text-decoration: none; 
   padding: 10px;
-  width: 100px;
+  width: 110px;
   font-size: 16px;
+  text-align: center;
 }
 
 /**** OTHER NEWS ****/
