--- a/code/style.css
+++ b/code/style.css
@@ -1,17 +1,54 @@
-html {
-  
-  color:black;
-
-  
+*  {
+  box-sizing: border-box;
 }
 
-body {
+
+ body  {
   margin: 0;
   padding: 0;
   
 }
+ h2  {
+  font-family: 'Cardo';
+  font-size: 30px;
+  text-align: center;
 
-header {
+
+}
+ p  {
+  font-size: 20px;
+  font-family: 'Josefin Sans';
+  padding: 20px;
+}
+
+.news-child >p:hover  {
+  text-decoration: underline;
+}
+
+
+ h3  {
+  font-size: 20px;
+  font-family: 'Cardo';
+  text-align: center;
+
+}
+
+ li  {
+  font-size: 18px;
+  font-family: 'Josefin Sans';
+  text-align: center;
+  
+}
+
+ul  {
+ list-style-type: none;
+ padding-bottom: 20px;
+
+}
+
+
+/*top nav*/
+header  {
   background-color: lightskyblue;
   min-height: 150px;
   color: white;
@@ -22,30 +59,28 @@ header {
 
 }
 
-.logo-name {
-    display: flex;
-    padding: 10px;
+.logo-name  {
+  display: flex;
+  align-items: center;
 }
 
-.logo {
+.logo  {
   width: 75px;
   height: 75px;
   border-radius: 50%;
  padding-top: 5px;
-  
-  
-
 }
 
 
-.website-name {
+.website-name  {
   font-size: 50px;
   display: flex;
   align-self: center;
+  margin-left: 20px;
 }
 
 
-nav ul{
+nav ul  {
   display: flex;
   justify-content: end;
   flex: 1;
@@ -54,278 +89,134 @@ nav ul{
 
 }
 
-nav li {
+nav li  {
   margin:10px;
   
 }
 
-.nav-logo img {
+.nav-logo img  {
   border-radius: 50%;
   width: 75px;
   height: 75px;
   padding-top: 10px;
 }
 
-.big-news {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 15px;
-    padding: 15px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    position: relative;
-    
-  }
-
-.news-card {
-  margin: 10px;
-  padding: 10px;
-  
-}
-
-.news-card-image:hover {
-  animation: bounce 2s;
-  
-	
-	
-}
-
-.news-card-text:hover {
-  animation: bounce 2s;
-  
-	
-	
-}
-  
-  
-.news-card-image {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  height: 500px;
-  width: 500px;
-  margin: 10px;
-  padding: 10px;
-  
-
-}
-
-h1 {
-  font-family: 'Cardo';
-  font-size: 30px;
-  margin-top: 0;
-  
-}
-
-.news-card-text {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: 950px;
-  height: 500px;
-  margin: 10px;
-  padding: 10px;
-}
-
-
-
-.news-card-text p {
-  font-size: 20px;
-  font-family: 'Josefin Sans';
-}
-
-.news-card-text h3 {
-  font-size: 20px;
-  font-family: 'Cardo';
-}
-
-.news-card-text li {
-  font-size: 18px;
-  font-family: 'Josefin Sans';
-}
-
-
-.other-news {
+.big-news-container  {
   display: flex;
-  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin: 15px;
+  padding: 15px;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center; 
-  text-align: center;
-
 }
 
-.news-child {
-  margin: 40px;
-  padding: 15px;
-  
-  }
-  
-.news-child:hover {
-  animation: bounce 2s;
+.news-card-text  {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 950px;
+  height: auto;
+  margin: 10px;
+  padding: 10px;
 }
 
-
-.one {
-  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
-  height: 300px;
-  width: 300px;
-  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-  
-}
-
-img {
+.news-card-image img  {
   width: 100%;
-  height: 100%;
-  display: block;
+  max-width: 600px;
+  height: auto; 
+}
+
+img  {
+  width: 100%;
+  height: 250px; 
   padding-top: 0px;
   padding-bottom: 0px;
   object-fit: cover;
 }
 
-
-footer {
-   text-align: center;
-   font-weight: bold;
-   font-family: 'Courier New', Courier, monospace;
-   background-color: lightskyblue;
-   color: white;
-   width: 100%;
-   bottom: 0;
-   left: 0;
-   }
-
-footer, p{
-  font-size: 20px;
-
+.other-news-container  {
+  text-align: center;
+  padding: 60px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
 }
 
+.news-child  {
+  margin:10px;
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+  border: 0.5px solid;
+  width: 350px;
+  height: auto;
+  max-width: 350px;
+}
 
-footer, a{
-  text-decoration:none;
-  font-size: 20px;
-  
+.news-child:hover  {
+  animation: bounce 2s;
 }
  
-
-  a:visited {
-    color:white;
-  }
-
-
-
-/* Extra small devices (phones, 425px and down) */
-@media only screen and (max-width: 425px) {
-  
-  .website-name {
-    font-size: 30px;
-    
-    
-  }
-
-  .logo-name {
-    display: inline-flex;
-    align-items: center;
-    
+footer  {
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: lightskyblue;
+  color: white;
+  padding:20px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }
 
-  .logo {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    /*flex: inline;*/
-    
-  
-  }
-  .nav, li {
-    display: none;
-  }
-  
-  
-  .other-news {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center; 
-    text-align: center;
-    
-     
-  
-  }
+footer, a  {
+ text-decoration:none;
+ font-size: 20px;
+}
 
-  .other-news, p {
-    padding-top: 10px;
-    
+footer img  {
+  height: 30px;
+  width: auto;
+  padding-left: 10px;
+}
+
+ .icons  {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+ }
+
+ 
+
+
+/*Media queries*/
+ @media only screen and (max-width: 425px) {
+   nav li {
+     display: none;
+   }
+ }
+
+
+
+ @media only screen and (max-width: 768px) {
+  
+      
+}
+
+
+
+@media only screen and (max-width: 375px){
+  img  {
+    width: 100%;
+    height: auto; 
+   
   }
-  .news-card-text {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 700px;
+  
+  .news-child  {
     width: 350px;
-    
-  }
-
-  .news-card-text, p {
-    font-size: 10px;
-  }
-  .news-card-text, h1 {
-    font-size: 15px;
-  }
-  .news-card-text, ul {
-    font-size: 10px;
+    height: auto;
   }
 }
-
-
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
-  .other-news {
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center; 
-    text-align: center;
-  
-    }
-    .big-news {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 15px;
-      padding: 15px;
-      flex-direction: row;
-      /*flex-wrap: wrap;*/
-      /*position: relative;*/
-
-}
-
-.nav-logo img {
-  display: none;
-}
-
-.news-card-text h1 {
-  font-size: 20px;
-}
-
-.news-card-text p {
-     font-size: 18px;
-  }
-
-.news-card-image {
-      height: 350px;
-      width: 350px;
-  }
-
-  .news-card-text {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 800px;
-    width: 350px;
-    
-  }
-
-}
-
-
-
 
 @keyframes bounce {
 	0%, 20%, 60%, 100% {
@@ -341,6 +232,5 @@ footer, a{
 	80% {
 		-webkit-transform: translateY(-10px);
 		transform: translateY(-10px);
-	}
+  }
 }
-
